k8s/infra/common/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: 观测
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.svg
    gethomepage.dev/description: Dashboard
    gethomepage.dev/pod-selector: >-
      app in (
         grafana
      )
spec:
  hostnames:
    - grafana.${INTERNAL_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
